--- a/styles.css
+++ b/styles.css
@@ -355,6 +355,13 @@ header {
     border-radius: 15px;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
+    transition: transform 0.2s;
+}
+.about-col-1 img:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
 }
 .about-col-2 {
     flex-basis: 60%;
@@ -391,11 +398,10 @@ header {
     left: 0;
     bottom: -8px;
     transition: 0.5s;
-    transform: translateY(-23px);
+
 }
 .tab-links.active-link::after{
     width: 100%;
-    transform: translateY(-23px);
 }
 .tab-contents ul li{
     list-style-type: none;
@@ -415,6 +421,44 @@ header {
 .tab-contents.active-tab{
     display: block;
 }
+#projects{
+    padding: 80px 14%;
+    color: #ababab;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(228, 226, 216);
+    background-image: url(assets/noisee.png);
+}
+.project-grid {
+    --gap: 10px;
+    --num-cols: 4;
+    --row-height: 300px;
+    padding: 4rem 16px;
+    display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap: var(--gap);    
+}
+.project-grid img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 22px;
+    transition: transform 0.3s;
+  
+}
+.project-grid img:hover{
+    cursor: pointer;
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);  
+    transform: translateY(-8px);  
+}
+.project-grid-col-2 {
+    grid-column: span 2;
+}
+.project-grid-row-2 {
+    grid-row: span 2;
+}
 
 .box {
     background: #0b0b13;
@@ -422,10 +466,6 @@ header {
     border-radius: 5px;
     cursor: pointer;
     transition: all .40s;
-}
-.box img {
-    width: 100px;
-    height: auto;
 }
 .copy {
     position: absolute;
@@ -466,7 +506,7 @@ header {
         --h2-font: 1.2rem;
     }
 }
-@media (max-width: 1020px) {
+@media (max-width: 1024px) {
     :root {
         --large-font: 3rem;
         --h2-font: 1.2rem;
@@ -474,6 +514,10 @@ header {
     }
     .home {
         height: 70vh;
+    }
+    .project-grid {
+        --num-cols: 2;
+        --row-heights: 200px;
     }
 }
 @media (max-width: 1000px) {
