--- a/styles.css
+++ b/styles.css
@@ -352,14 +352,14 @@ header {
     width: 100%;
     height: 600px;
     object-fit: cover;
-    border-radius: 15px;
+    border-radius: 16px;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
-    transition: transform 0.2s;
+    transition: transform 0.3s;
 }
 .about-col-1 img:hover{
     cursor: pointer;
-    transform: scale(1.1);
+    transform: translateY(-8px);
     -webkit-filter: grayscale(0%);
     filter: grayscale(0%);
 }
@@ -388,6 +388,10 @@ header {
     color: var(--blk-color);
     cursor: pointer;
     position: relative;
+    transition: transform 0.3s;
+}
+.tab-links:hover {
+    transform: translateY(-3px);
 }
 .tab-links::after{
     content: '';
@@ -431,27 +435,59 @@ header {
 }
 .project-grid {
     --gap: 10px;
-    --num-cols: 4;
+    --num-cols: 3;
     --row-height: 300px;
-    padding: 4rem 16px;
+
+    padding: 4rem 16px 0px 16px;
     display: grid;
     grid-template-columns: repeat(var(--num-cols), 1fr);
     grid-auto-rows: var(--row-height);
     gap: var(--gap);    
 }
-.project-grid img {
+#projects a {
+    background-color: white ;
+    padding: 10px 20px;
+    margin-top: 15px;
+    border-radius: 12px;
+    transition: opacity 0.3s;
+}
+#projects a:hover {
+    opacity: 0.8;
+}
+.hov-card {
+    position: relative;
+}
+.hov-card1{
+    grid-column: span 2;
+}
+.hov-card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 22px;
     transition: transform 0.3s;
-  
 }
-.project-grid img:hover{
+.desc {
+    --text-s: 14px;
+    font-size: var(--text-s);
+    border-radius: 22px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
     cursor: pointer;
-    -webkit-filter: grayscale(0%);
-    filter: grayscale(0%);  
-    transform: translateY(-8px);  
+    transition: opacity 0.3s;
+}
+.desc:hover { 
+    opacity: 1;
 }
 .project-grid-col-2 {
     grid-column: span 2;
