--- a/styles.css
+++ b/styles.css
@@ -357,7 +357,6 @@ header {
     filter: grayscale(100%);
     transition: transform 0.3s;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
-
 }
 .about-col-1 img:hover{
     cursor: pointer;
@@ -440,9 +439,8 @@ header {
 }
 .project-grid {
     --gap: 10px;
-    --num-cols: 3;
+    --num-cols: 5;
     --row-height: 300px;
-
 
     display: grid;
     grid-template-columns: repeat(var(--num-cols), 1fr);
@@ -512,6 +510,9 @@ header {
 .desc h2 {
     font-weight: 500;
 }
+.desc p {
+    text-align: center;
+}
 .project-grid-col-2 {
     grid-column: span 2;
 }
@@ -519,13 +520,37 @@ header {
     grid-row: span 2;
 }
 
-#skills{
+#technology{
     padding: 80px 14%;
-    color: #ababab;
+    color: var(--blk-color);
     width: 100vw;
     height: 100vh;
     background-color: rgb(228, 226, 216);
     background-image: url(assets/noisee.png);
+}
+.subsub-title{
+    font-size: 70px;
+}
+.outer-grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 150px;
+    gap: 50px;
+    
+}
+.inner-grid ul{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 20px;
+    gap: 10px;
+    font-size: 20px;
+    font-weight: 600;
+}
+.inner-grid ul li {
+    padding-top: 20px;
+}
+#technology .sub-title{
+    margin-bottom: 50px;
 }
 .scroll-down header {
    transform: translate3d(0, -100%, 0);
@@ -576,6 +601,12 @@ header {
     }
     .logo {
         width: 100px;
+    }
+    .project-grid-col-2 {
+        grid-column: span 2;
+    }
+    .project-grid-row-2 {
+        grid-row: span 2;
     }
 
 }
@@ -631,6 +662,12 @@ header {
     #social{
         font-size: 50px;
     }
+    .project-grid-col-2 {
+        grid-column: span 1;
+    }
+    .project-grid-row-2 {
+        grid-row: span 1;
+    }
 
 }
 @media (max-width: 1000px) {
@@ -666,7 +703,12 @@ header {
     .logo {
         width: 90px;
     }
-    
+    .project-grid-col-2 {
+        grid-column: span 1;
+    }
+    .project-grid-row-2 {
+        grid-row: span 1;
+    }
 
 }
 @media (max-width: 910px){
@@ -681,6 +723,12 @@ header {
     }
     #social{
         font-size: 45px;
+    }
+    .project-grid-col-2 {
+        grid-column: span 1;
+    }
+    .project-grid-row-2 {
+        grid-row: span 1;
     }
 }
 @media (max-width: 820px) {
@@ -702,6 +750,12 @@ header {
     .project-grid {
         --num-cols: 2;
         --row-heights: 200px;
+    }
+    .project-grid-col-2 {
+        grid-column: span 1;
+    }
+    .project-grid-row-2 {
+        grid-row: span 1;
     }
 
 }
@@ -737,6 +791,22 @@ header {
         font-size: 12px;
     }
     .about-col-1 img{
+        height: 200px;
+        width: 100%;
+        margin: 20px 70%;
+    }
+    .project-grid-col-2 {
+        grid-column: span 1;
+    }
+    .project-grid-row-2 {
+        grid-row: span 1;
+    }
+}
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 796px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+    .contact-section {
         height: 200px;
         width: 100%;
         margin: 20px 70%;
