--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 }
 :root {
     --bg-color: rgb(8, 8, 7);
-    --prim-color: rgb(231, 228, 202);
+    --prim-color: rgb(221, 219, 202);
     --blk-color: rgb(53, 53, 53);
     --sec-color: #ebe9e9c5;
     --text-color: #fff;
@@ -199,32 +199,17 @@ svg {
     
     opacity: 1;
 }
-.card1{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top-left-radius: 1.5rem;
-    border-top-right-radius: 1.5rem;
-    overflow: hidden; 
-    background-color: rgb(0, 0, 0);
-}
-
 .logo {
     width: 110px;
     transition: transform 0.5s ease;
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
 }
 .logo:hover{
     transform: scale(0.9);
-    filter: grayscale(0%);
+
 }
 body {
     background-color: var(--bg-color);
     background-image: url(assets/noisee.png);
-    color: var(--text-color);
     overflow-x: hidden;
 }
 header {
@@ -336,7 +321,7 @@ header {
     border-top-left-radius: 1.5rem;
     border-top-right-radius: 1.5rem;
     overflow: hidden; 
-    background-color: rgb(228, 226, 216);
+    background-color: rgb(29, 29, 28);
     background-image: url(assets/noisee.png); 
 }
 .row {
@@ -368,13 +353,13 @@ header {
     flex-basis: 60%;
 }
 .sub-title {
-    color: var(--blk-color);
+    color: var(--prim-color);
     font-size: 100px;
     font-weight: 700;
     line-height: 110%;
 }
 .about-p {
-    color: #757575;
+    color: #8b8b8b;
     font-weight: 500;
     font-size: 23px;
 }
@@ -386,7 +371,7 @@ header {
     margin-right: 50px;
     font-size: 25px;
     font-weight: 500;
-    color: var(--blk-color);
+    color: var(--prim-color);
     cursor: pointer;
     position: relative;
     transition: transform 0.3s;
@@ -410,11 +395,11 @@ header {
 }
 .tab-contents ul li{
     list-style-type: none;
-    color: rgb(150, 150, 150);
+    color: rgb(180, 180, 180);
     margin: 10px 0;
 }
 .tab-contents ul li span{
-    color: #000000;
+    color: var(--prim-color);
     letter-spacing: 2px;
     font-weight: 500;
     font-size: 20px;
@@ -427,11 +412,11 @@ header {
     display: block;
 }
 #projects{
-    padding: 80px 14%;
-    color: #ababab;
+    padding: 50px 14%;
+    color: var(--prim-color);
     width: 100vw;
-    height: 100vh;
-    background-color: rgb(228, 226, 216);
+    height: auto;
+    background-color: rgb(20, 20, 20);
     background-image: url(assets/noisee.png);
 }
 #projects .sub-title{
@@ -445,7 +430,8 @@ header {
     display: grid;
     grid-template-columns: repeat(var(--num-cols), 1fr);
     grid-auto-rows: var(--row-height);
-    gap: var(--gap);    
+    gap: var(--gap); 
+    margin-bottom: 100px;   
 }
 #projects a {
     background-color: var(--bg-color);
@@ -462,17 +448,15 @@ header {
     transform: scale(1.1);
 }
 .hov-card {
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
     transition: all 0.3s ease-out;
     position: relative;
     border-radius: 22px;
+    border: 2px solid white;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
 .hov-card:hover{
     transform: translateY(-5px) scale(1.005);
-    -webkit-filter: grayscale(0%);
-    filter: grayscale(0%);
+    border: 2px dashed rgb(255, 175, 3);
 }
 .hov-card img {
     width: 100%;
@@ -480,10 +464,6 @@ header {
     object-fit: cover;
     border-radius: 22px;
     transition: transform 0.3s;
-}
-.hov-card img:hover{
-    -webkit-filter: grayscale(0%);
-    filter: grayscale(0%);
 }
 .desc {
     --text-s: 14px;
@@ -522,20 +502,20 @@ header {
 
 #technology{
     padding: 80px 14%;
-    color: var(--blk-color);
+    color: var(--prim-color);
     width: 100vw;
     height: 100vh;
-    background-color: rgb(228, 226, 216);
+    background-color: rgb(29, 29, 28);
     background-image: url(assets/noisee.png);
 }
 .subsub-title{
-    font-size: 70px;
+    font-size: 65px;
 }
 .outer-grid{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 150px;
-    gap: 50px;
+    gap: 20px;
     
 }
 .inner-grid ul{
@@ -551,7 +531,61 @@ header {
 }
 #technology .sub-title{
     margin-bottom: 50px;
+    text-align: center;
 }
+
+#copyright{
+    padding: 30px 14%;
+    color: var(--prim-color);
+    width: 100vw;
+    height: auto;
+    background-color: rgb(36, 35, 35);
+    background-image: url(assets/noisee.png);
+}
+.contact{
+    text-align: center;
+}
+.contact .sub-title {
+    font-size: 150px;
+    margin-bottom: 100px;
+    cursor: pointer;
+    text-decoration: underline 5px;
+}
+.contact p {
+    font-size: 30px;
+}
+.top-grid{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 50px;
+
+}
+.bottom-grid i {
+    vertical-align: middle;
+    padding: 0px 10px;
+}
+.bottom-grid h2{
+    font-weight: 500;
+    font-size: 30px;
+}
+#copyright a {
+    color: inherit;
+}
+#copyright a:hover:not(.up){
+    color: #fff;
+}
+.up {
+    font-size: 70px;
+    background-color: rgb(94, 94, 94);
+    border-radius: 50%;
+}
+.up i{
+    padding-bottom: 12px;
+}
+.hihi{
+    font-size: 60px;
+}
+
 .scroll-down header {
    transform: translate3d(0, -100%, 0);
 }
@@ -608,7 +642,27 @@ header {
     .project-grid-row-2 {
         grid-row: span 2;
     }
-
+    .contact .sub-title {
+        font-size: 70px;
+    }
+    .contact p {
+        font-size: 20px;
+    }
+    #technology{
+        padding: 50px 5%;
+    }
+    .subsub-title{
+        font-size: 45px;
+    }
+    .outer-grid{
+        gap: 10px;
+    }
+    .inner-grid ul{
+        font-size: 18px;
+    }
+    #technology .sub-title{
+        margin-bottom: 20px;
+    }
 }
 @media (max-width: 1230px) {
     :root {
@@ -668,6 +722,21 @@ header {
     .project-grid-row-2 {
         grid-row: span 1;
     }
+    .contact .sub-title {
+        font-size: 70px;
+    }
+    .contact p {
+        font-size: 20px;
+    }
+    #technology{
+        padding: 10px 3%;
+    }
+    .subsub-title{
+        font-size: 40px;
+    }
+    .inner-grid ul{
+        font-size: 16px;
+    }
 
 }
 @media (max-width: 1000px) {
@@ -708,6 +777,21 @@ header {
     }
     .project-grid-row-2 {
         grid-row: span 1;
+    }
+    .contact .sub-title {
+        font-size: 70px;
+    }
+    .contact p {
+        font-size: 20px;
+    }
+    .subsub-title{
+        font-size: 35px;
+    }
+    .inner-grid ul{
+        font-size: 16px;
+    }
+    #technology .sub-title{
+        margin-bottom: 13px;
     }
 
 }
@@ -800,6 +884,27 @@ header {
     }
     .project-grid-row-2 {
         grid-row: span 1;
+    }
+    .contact .sub-title {
+        font-size: 30px;
+    }
+    .contact p {
+        font-size: 10px;
+    }
+    .contact ul li {
+        font-size: 10px;
+    }
+    #technology{
+        padding: 50px 5%;
+    }
+    .subsub-title{
+        font-size: 45px;
+    }
+    .outer-grid{
+        gap: 10px;
+    }
+    .inner-grid ul{
+        font-size: 18px;
     }
 }
 @media only screen 
