--- a/src/contacts.css
+++ b/src/contacts.css
@@ -29,6 +29,12 @@ h2 {
     font-size: 35px;
     color: var(--blk-color);
 }
+#menu-icon {
+    font-size: 28px;
+    z-index: 10001;
+    cursor: pointer;
+    display: none;
+}
 .navbar {
     margin-top: 20px;   
 }
@@ -150,4 +156,38 @@ span {
 #copyright h2 {
     font-size: 20px;
     font-weight: 550;
+}
+@media (max-width: 1000px) {
+    header {
+        padding: 18px 3%;
+    }
+    #menu-icon{
+        color: var(--blk-color);
+        font-size: 40px;
+        display: block;
+    }
+    .navbar{
+        position: absolute;
+        top: -700px;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(228, 226, 216);
+        box-shadow: 0px 15px 30px 0px rgb(0 0 0 / 70%);
+        text-align: center;
+        transition: 0.3s ease-in-out;
+    }
+    .navbar a {
+        color: #000;
+        display: block;
+        padding: 0.5rem;
+        margin: 1rem;
+    }
+    .navbar.active{
+        top: 0%;
+    }
+    .logo {
+        width: 90px;
+    }
 }
