--- a/src/styles.css
+++ b/src/styles.css
@@ -420,7 +420,8 @@ header {
     background-image: url(../assets/noisee.png);
 }
 #projects .sub-title{
-    margin-bottom: 50px;
+    margin-top: 70px;
+    margin-bottom: 70px;
 }
 .project-grid {
     --gap: 10px;
@@ -547,9 +548,30 @@ header {
     text-align: center;
 }
 .contact .sub-title {
-    font-size: 150px;
+    font-size: 120px;
     margin-bottom: 100px;
     cursor: pointer;
+    transition: transform 0.5s;
+}
+.contact .sub-title:hover{
+    transform: scale(1.2);
+}
+.contact .sub-title::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px; 
+    background-color: transparent; 
+    bottom: 0;
+    left: 0;
+    transform: scaleX(0); 
+    transform-origin: top;
+    transition: 0.7s ease-in-out; 
+}
+.contact .sub-title:hover::before {
+    color: var(--prim-color);
+    transform: scaleX(1);
+    background-color: var(--prim-color); 
 }
 .contact p {
     font-size: 30px;
